# secretary-backend

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
app/: crud.py  database.py  main.py  models.py  schemas.py  service.py  user_profile.py
app/agent/: search.py  search_improved.py
app/routers/: agent.py  events.py  masculine_planner.py  planner.py  suggestion.py  user_profile.py
